# pybind11_mkdoc

./: LICENSE  README.md  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml
pybind11_mkdoc/: __init__.py  __main__.py  mkdoc.py  mkdoc_lib.py
tests/: cli_test.py  long_parameter_test.py  sample_header_test.py
tests/sample_header_docs/: sample header with spaces.h
