[build-system]
requires = ["flit_core>=3.9"]
build-backend = "flit_core.buildapi"

[project]
name = "pybind11_mkdoc"
description = "Generate documentation bindings for pybind11 modules."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Wenzel Jakob", email = "wenzel.jakob@epfl.ch" }
]
urls.homepage = "https://github.com/pybind/pybind11_mkdoc"
dependencies = ["clang"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Documentation",
  "Operating System :: POSIX",
  "Operating System :: MacOS"
]
dynamic = ["version"]

[dependency-groups]
test = [
    "pytest",
    "pybind11",
    "pytest-forked",
]
dev = [{ include-group = "test" }]

[project.scripts]
pybind11-mkdoc = "pybind11_mkdoc:main"


[tool.flit.sdist]
include = ["tests/**/*.py", "tests/**/*.h", ".gitignore"]


[tool.ruff.lint]
ignore = ["S110", "BLE", "PLW2901", "PLW0603", "INP001"]
